--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^5.2.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "momentjs": "^2.0.0",
