--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "Portal_Unicel",
   "version": "1.0.0",
-  "description": "",
+  "description": "sistema de controle de membros para igreja da unidade",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon -e js,json,njk"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/henrypadua/portal_unicel.git"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +22,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "momentjs": "^2.0.0",
+    "moment": "^2.0.0",
     "mysql2": "^1.5.3",
     "nunjucks": "^3.1.3",
     "sequelize": "^5.10.0"
